[package]
name = "zkwasm-rlp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = {git = "https://github.com/bincode-org/bincode.git", rev = "aada4bb"}
num-bigint = "0.4.3"
wasm-bindgen = "0.2.83"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
